<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp">

    <androidx.cardview.widget.CardView
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="400dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                app:autoSizeTextType="uniform"
                android:id="@+id/tv_title_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                tools:text="@string/gen_desc" />

            <ScrollView
                android:id="@+id/body_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_horizontal|center_vertical">

                    <TextView
                        android:id="@+id/tv_body_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:text="@string/gen_desc"/>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/buttons_action_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    style="@style/ButtonStyleWhite"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/title_cancel"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_accept"
                    style="@style/ButtonStyleNormal"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:text="@string/title_accept"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
