<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_route"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RouteFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".95" />


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/guideline_footer"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_v_left"
            app:layout_constraintTop_toTopOf="@+id/guideline_header">

            <TextView
                android:id="@+id/tv_route_form_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/route_navigate_title"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toStartOf="@+id/guideline_v_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_v_left" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_route_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/route_name_title"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:counterMaxLength="20"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toStartOf="@+id/guideline_v_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_v_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_body">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_navigate"
                style="@style/ButtonStyleNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_route_title"/>

        </LinearLayout>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".93" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>